<resources>
    <string name="app_name">YanivProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_intro">האפליקציה נועדה לסייע בחלוקת כספים בין חברים בצורה קלה, נוחה ומהירה. בין אם מדובר בתשלום במסעדה, שכר דירה משותף או כל הוצאה קבוצתית אחרת, האפליקציה מאפשרת לחשב ולחלק את הסכומים בצורה הוגנת ולשמור על תיעוד ברור של התשלומים. הצורך נובע מהאתגר בניהול כספים משותפים ללא בלבול או חוסר הבנה.\n\nמטרת האפליקציה היא לאפשר יצירת קבוצות תשלום, הוספת הוצאות משותפות, חישוב חלוקה הוגנת של התשלומים. המשתמשים יכולים לעקוב אחרי תשלומים פתוחים וסגורים, לקבל תזכורות ולהתנהל בצורה מסודרת.\n\nהאפליקציה מיועדת לכל מי שחולק הוצאות עם אחרים – סטודנטים, שותפים לדירה, קבוצות חברים, עמיתים לעבודה או משפחות. כך שאין הגבלת גיל אך בדרך כלל הקהל הבוגר יותר יהיה זה שישתמש בה.</string>

    <string name="about_features_title">תכונות עיקריות</string>
    <string name="about_features">• יצירת קבוצות תשלום בקלות\n• חישוב אוטומטי של חלוקת הוצאות\n• מעקב אחר תשלומים ותזכורות\n• תמיכה במגוון שיטות חלוקה\n• ממשק משתמש נוח ופשוט\n• אבטחת מידע ושמירה על פרטיות</string>

    <string name="about_benefits_title">יתרונות השימוש באפליקציה</string>
    <string name="about_benefits">• חיסכון בזמן בניהול הוצאות משותפות\n• מניעת אי הבנות וחילוקי דעות\n• תיעוד מסודר של כל התשלומים\n• גישה מהירה למידע בכל זמן ומקום\n• תמיכה במגוון רחב של תרחישי שימוש</string>

    <string name="about_page_title">SmartSplit</string>
    <string name="about_page_subtitle">חלוקת הוצאות בצורה חכמה</string>
</resources>